--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,3 @@
-** std.experimental logger with android style output [[https://github.com/gizmomogwai/androidlogger4d][https://img.shields.io/github/tag/gizmomogwai/androidlogger4d.svg]][[https://travis-ci.org/gizmomogwai/androidlogger4d][https://travis-ci.org/gizmomogwai/androidlogger4d.svg?branch=master]][[https://gizmomogwai.github.io/androidlogger4d/][https://img.shields.io/readthedocs/pip.svg]]
+** std.experimental logger with android style output [[https://gizmomogwai.github.io/androidlogger4d][https://img.shields.io/readthedocs/pip.svg?style=flat-square]] [[https://travis-ci.org/gizmomogwai/androidlogger4d][https://img.shields.io/travis/gizmomogwai/androidlogger4d/master.svg?style=flat-square]] [[https://github.com/gizmomogwai/androidlogger4d][https://img.shields.io/github/tag/gizmomogwai/androidlogger4d.svg?style=flat-square]] [[https://codecov.io/gh/gizmomogwai/androidlogger4d][https://img.shields.io/codecov/c/github/gizmomogwai/androidlogger4d/master.svg?style=flat-square]]
 
-you can use the logger itself to do some coloring, or some 3rd party programs that color android output (e.g. [[https://github.com/flxo/rogcat][rotgcat]], [[https://github.com/JakeWharton/pidcat][pidcat]]).
+you can use the logger itself to do some coloring, or some 3rd party programs that color android output (e.g. [[https://github.com/flxo/rogcat][rogcat]], [[https://github.com/JakeWharton/pidcat][pidcat]]).
